--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -7,4 +7,11 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="System.IO.Ports" Version="8.0.0" />
+      </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Interfaces\" />
+    </ItemGroup>
 </Project>
