--- a/Mapper/Mapper.csproj
+++ b/Mapper/Mapper.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
     <ItemGroup>
+        <PackageReference Include="ScottPlot" Version="5.0.40" />
         <PackageReference Include="System.IO.Ports" Version="8.0.0" />
       </ItemGroup>
 </Project>
